--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
     <meta name="description" content="Portfolio for world-renowned software engineer Haemin">
     <meta name="author" content="HaeMin">
+    <meta property="og:image" content="./image/favicon.png">
     <script src="https://kit.fontawesome.com/50737fff9c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
