--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li class="navbar_menu_item" data-link="#skills">Skills</li>
             <li class="navbar_menu_item" data-link="#work">Work</li>
             <li class="navbar_menu_item" data-link="#testimonials">Testimonials</li>
-            <li class="navbar_menu_item" data-link="#cotact">Contact</li>
+            <li class="navbar_menu_item" data-link="#contacts">Contact</li>
         </ul>
         <!-- Toggle button -->
         <button class="navbar_toggle-btn"> <i class="fas fa-hamburger"></i> </button>
@@ -43,7 +43,7 @@
         <!-- <div class="home_avatar"></div> -->
         <div class="txt_part">
             <h1 class="home_title">Hello, <br>I'm WEB PUBLISHER</h1>
-            <h2 class="home_description">한발 한발 더 나아가기 위해 끊임없이 노력하고 <br>탐구하는 프론트엔드개발자가 되겠습니다.</h2>
+            <h2 class="home_description">한발 한발 더 나아가기 위해 끊임없이 노력하고 <br>탐구하는 인재가 되겠습니다.</h2>
             <button class="home_contact">Contact Me</button>
         </div>
        </div>
@@ -290,7 +290,7 @@
             </div>
            <div class="testimonial_speech-bubble">
             <p>디자인적 감각이 매우 높으며, 트렌드를 잘 따라갑니다. 다른 사람이 주는 피드백을 적절하게 수용하여, 본인의 스타일에 맞게 잘 소화해냅니다. 디자인 업무를 시작하기 전 항상 레퍼런스 서치를 우선적을 하여 트렌드를 공부하고 그것을 디자인에 잘 적용합니다.</p>
-            <p class="name"><a href="">김연재</a>현동인터내셔널/과장</p>
+            <p class="name"><a href="">김연태/</a>현동인터내셔널/과장</p>
            </div>
         </div>
         <div class="testimonial">
