--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </div>
                         <div class="cont">
                             <p class="title blue_color">ADRESS</p>
-                            <span>서울시 송파구</span>
+                            <span>경기 남양주시</span>
                         </div>
                         <div class="cont">
                             <p class="title blue_color">LICENSE</p>
